Added events and choices. Voting works.

--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :imdb_ref %><br />
-    <%= f.text_area :imdb_ref %>
+    <%= f.text_field :imdb_ref %>
   </div>
   <div class="actions">
     <%= f.submit %>
