--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,5 +17,12 @@
 </table>
 
 <br />
-
 <%= link_to 'New Event', new_event_path %>
+
+  <h2>Voting poll</h2>
+
+  <% if @next_event.nil? %>
+    <p><strong>Note:</strong> there is no next session, so voting is disabled to encourage the scheduling.</p>
+  <% end %>
+
+  <%= render 'movies/table' %>
