Beautified it a bit. Prepared to push to heroku.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -41,10 +41,15 @@ span .star-full:before {
   color:#e3cf7a
 }
 
+td .score-controls {
+  vertical-align: middle;
+}
+
 .score {
   font-size: 1.6em;
   font-weight: bold;
-  margin: 0 0.5em;
+  min-width: 2em;
+  text-align: center;
 }
 
 @import "twitter/bootstrap/responsive";
