BOOOYA!! COMMIT DA FRANCESINHA: Added calendar. Added user authentication and registration. Added a bit of authorization.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -52,6 +52,27 @@ td .score-controls {
   text-align: center;
 }
 
+#calendar .notmonth {
+  color: #eaeaea;
+}
+
+#calendar .weekend {
+  background: #ffffee;
+}
+
+#calendar .today {
+  font-weight: bold;
+  background: #ffffcc;
+}
+
+#calendar .day {
+  text-align: right;
+}
+
+#calendar td {
+  width: 14%;
+}
+
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
