--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,24 +1,34 @@
 <div class="row">
   <h1>Calendar</h1>
 
-  <table class="table table-striped">
-    <tr>
-      <th>Day</th>
-      <th></th>
-      <th></th>
-    </tr>
-
-  <% @events.each do |event| %>
-    <tr>
-      <td><%= event.day %></td>
-      <td><%= link_to 'Show', event %></td>
-      <td><%= link_to 'Destroy', event, confirm: 'Are you sure?', method: :delete %></td>
-    </tr>
+  <%= calendar_for(@events, year: @current_month.year, month: @current_month.month, html: { class: "table table-bordered table-striped", id: "calendar" }) do |t| %>
+    <%= t.head('Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday') %>
+    <%= t.day(day_method: :day) do |day, events| %>
+      <p class="day">
+        <%= day.day %>
+      </p>
+      <p style="min-height: 1.5em; text-align: right">
+        <% if events.empty? %>
+        <% else %>
+          <% events.each do |event| %>
+            <%= link_to "Movie session", event %>
+          <% end %>
+        <% end %>
+      </p>
+    <% end %>
   <% end %>
-  </table>
 
   <div class="well">
-    <%= link_to 'New Event', new_event_path, class: "btn btn-primary" %>
+    <div class="pull-left">
+      <%= link_to 'New movie session', "#new-event", class: "btn btn-primary", data: { toggle: "modal" } %>
+    </div>
+
+    <div class="pull-right">
+      <div class="btn-group">
+        <%= link_to 'Previous month', events_path(month: @previous_month.month, year: @previous_month.year), class: "btn", data: { toggle: "modal" } %>
+        <%= link_to 'Next month', events_path(month: @next_month.month, year: @next_month.year), class: "btn", data: { toggle: "modal" } %>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -33,4 +43,25 @@
   <% end %>
 
   <%= render 'movies/table' %>
+</div>
+
+<div class="modal fade" id="new-event" data-show="false">
+  <div class="modal-header">
+    <button class="close" data-dismiss="modal">×</button>
+    <h3>Schedule a new movie session</h3>
+  </div>
+  <div class="modal-body">
+    <%= form_for(@event) do |f| %>
+      <div class="field">
+        <%= f.label :day %><br />
+        <%= f.date_select :day %>
+      </div>
+      <div class="actions">
+        <%= f.submit class: "btn btn-primary" %>
+      </div>
+    <% end %>
+  </div>
+  <div class="modal-footer">
+    <a data-dismiss="modal" href="#new-event" class="btn">Close</a>
+  </div>
 </div>
