--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,10 +15,25 @@
     <%= f.label :username %><br />
     <%= f.text_field :username %>
   </div>
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
+
+  <% if @user.new_record? %>
+    <div class="field">
+      <%= f.label :email_confirmation %><br />
+      <%= f.text_field :email_confirmation %>
+    </div>
+  <% end %>
+
+
+  <div class="field">
+    <%= f.label :password %><br />
+    <%= f.password_field :password %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
