--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,10 @@
 <div class="row">
   <h1>Calendar</h1>
 
+  <h2 class="pull-right">
+    <%= %w[January February March April May June July August September October November December][@current_month.month-1] %>, <%= @current_month.year %>
+  </h2>
+
   <%= calendar_for(@events, year: @current_month.year, month: @current_month.month, html: { class: "table table-bordered table-striped", id: "calendar" }) do |t| %>
     <%= t.head('Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday') %>
     <%= t.day(day_method: :day) do |day, events| %>
