--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @event.day %></h1>
 
-<% unless @event.status.eql?("eye-goggled") %>
+<% if @event.status.eql?("eye-goggled") %>
+<% elsif Event.next.eql?(@event) %>
   <table>
     <tr>
       <th>Movie title</th>
@@ -28,7 +29,9 @@
 
 <% end %>
 
-<p><strong>Note:</strong> the following action cannot be undone. Proceed at your own risk.</p>
-<%= link_to 'Cancel this event', @event, confirm: 'Are you sure?', method: :delete %>
+<% if signed_in? and current_user.admin? %>
+  <p><strong>Note:</strong> the following action cannot be undone. Proceed at your own risk.</p>
+  <%= link_to 'Cancel this event', @event, confirm: 'Are you sure?', method: :delete %>
+<% end %>
 
 <%= link_to 'Back', events_path %>
