--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,40 +1,58 @@
-<%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<%= form_for(@user, html: { class: "form-horizontal" }) do |f| %>
+  <%= field_set_tag "Personal information" do  %>
+    <div class="control-group">
+      <%= f.label :username, class: "control-label" %>
+      <div class="controls">
+        <%= f.text_field :username, class: "input-xlarge" %>
+        <p class="help-block">Pick a number, now discard it and pick a username</p>
+      </div>
+    </div>
 
-      <ul>
-      <% @user.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+    <div class="control-group">
+      <%= f.label :email, class: "control-label" %>
+      <div class="controls">
+        <%= f.text_field :email, class: "input-xlarge" %>
+        <p class="help-block">Your email (that will never be shown, except when I sell it to spammers)</p>
+      </div>
+    </div>
+
+    <% if @user.new_record? %>
+      <div class="control-group">
+        <%= f.label :email_confirmation, class: "control-label" %>
+        <div class="controls">
+          <%= f.text_field :email_confirmation, class: "input-xlarge" %>
+          <p class="help-block">The same email, again</p>
+        </div>
+      </div>
+    <% end %>
+
+    <div class="control-group">
+      <%= f.label :password, class: "control-label" %>
+      <div class="controls">
+        <%= f.password_field :password, class: "input-xlarge" %>
+        <% if @user.new_record? %>
+          <p class="help-block">Your password</p>
+        <% else %>
+          <p class="help-block">Your password (leave blank if you don't want to change it)</p>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="form-actions">
+      <button type="submit" class="btn btn-primary">
+        <i class="icon icon-user"></i>
+        <% if @user.new_record? %>
+          Register account
+        <% else %>
+          Edit your data
+        <% end %>
+      </button>
+
+      <% if @user.new_record? %>
+        <%= link_to "Cancel", root_path, class: "btn" %>
+      <% else %>
+        <%= link_to "Cancel", profile_path, class: "btn" %>
       <% end %>
-      </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </div>
-
-  <% if @user.new_record? %>
-    <div class="field">
-      <%= f.label :email_confirmation %><br />
-      <%= f.text_field :email_confirmation %>
-    </div>
-  <% end %>
-
-
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 <% end %>
