Again, minor style changes.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -23,6 +23,10 @@ body {
   text-transform: uppercase;
 }
 
+.movie-tagline {
+  font-style: italic;
+}
+
 span .star {
   font-family:FontAwesome;
   font-weight:normal;
